syntax = "proto3";

package crawl;

service Crawler {
    rpc Crawl (CrawlOpt) returns (stream ImgInfo);
    rpc Health (Empty) returns (ServiceStatus);
}

message CrawlOpt {
    string link = 1;
    uint32 maxDepth = 2;
    bool sameHost = 3;
    repeated string containsTags = 4;
}

message ImgInfo {
    string imgName = 1;
}

message Empty {}

message ServiceStatus {
    bool serviceUp = 1;
    string message = 2;
}
